Restructure scripts directory and enhance evaluation outputs
- Reorganize training/scripts into subdirectories (training/, evaluation/, utils/)
- Update all import statements for new structure
- Enhance evaluate_checkpoint.py to auto-save to training/evaluations/{model_name}_evaluation/
- Enhance generate_vignette_responses.py to auto-save to training/evaluations/{model_name}_vignettes/
- Add models/ to .gitignore to exclude large model files
- Update training configs and shell scripts for new paths

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Data directories - all large data files
 data/
 logs/
+models/
 preprocessing/data/
 preprocessing/processed_data/
 case outcome extraction/case_outcome_prediction/data
