--- a/training/requirements.txt
+++ b/training/requirements.txt
@@ -1,14 +1,14 @@
 # LLaMA Fine-tuning Pipeline Requirements
 # Core ML/DL libraries
-torch>=2.1.0
-transformers>=4.36.0
-accelerate>=0.25.0
+torch>=2.0.0
+transformers>=4.30.0
+accelerate>=0.20.0
 peft>=0.7.0
-datasets>=2.16.0
+datasets>=2.12.0
 
 # Training optimization
-deepspeed>=0.12.0
-flash-attn>=2.3.0
+deepspeed>=0.9.0
+flash-attn>=2.0.0
 bitsandbytes>=0.41.0
 
 # Data processing
@@ -16,20 +16,22 @@ tokenizers>=0.15.0
 sentencepiece>=0.1.99
 
 # Monitoring and logging
-wandb>=0.16.0
+wandb>=0.15.0
 tensorboard>=2.15.0
-tqdm>=4.66.0
+tqdm>=4.65.0
 
 # Evaluation
 evaluate>=0.4.0
+rouge-score>=0.1.2
+bert-score>=0.3.11
 scikit-learn>=1.3.0
 
 # Utilities
 numpy>=1.24.0
-pandas>=2.1.0
+pandas>=1.5.0
 jsonlines>=4.0.0
 click>=8.1.0
-pyyaml>=6.0.0
+pyyaml>=6.0
 python-dotenv>=1.0.0
 
 # Optional: For advanced optimizations
