--- a/training/configs/post_brexit_2019_2025_config.yaml
+++ b/training/configs/post_brexit_2019_2025_config.yaml
@@ -12,7 +12,8 @@ data:
   dataset_patterns: ["post_brexit_2019_2025_chunks.jsonl"]
   train_split: 0.90
   eval_split: 0.10
-  seed: 42
+  seed: 42  # Training randomness seed (can be overridden for robustness testing)
+  data_split_seed: 42  # Fixed seed for train/test split (keep identical across rounds)
   text_column: "text"
   add_eos_token: true
   chunk_size: 512  # Further reduced for speed
