--- a/vignettes_analysis/comparative_fairness/requirements.txt
+++ b/vignettes_analysis/comparative_fairness/requirements.txt
@@ -8,4 +8,8 @@ scipy>=1.7.0
 scikit-learn>=1.0.0
 jupyter>=1.0.0
 tqdm>=4.62.0
-numba>=0.56.0 
+numba>=0.56.0
+streamlit>=1.25.0
+plotly>=5.15.0
+dash>=2.10.0
+kaleido>=0.2.1 
